[package]
name = "bevy_top_down_camera"
version = "0.1.5"
edition = "2024"
description = "A top down camera written for Bevy"
keywords = ["bevy", "camera", "topdown", "ARPG", "gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olekspickle/bevy_top_down_camera"
homepage = "https://github.com/olekspickle/bevy_top_down_camera"
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.17.0-rc.2", default-features = false, features = ["bevy_winit", "bevy_render", "wayland"] }

[dev-dependencies]
bevy = { version = "0.17.0-rc.2", default-features = false, features = ["bevy_winit", "bevy_render", "wayland"] }
