[package]
name = "bevy_top_down_camera"
version = "0.4.0"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
description = "A top down camera written for Bevy"
keywords = ["bevy", "camera", "topdown", "ARPG", "gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olekspickle/bevy_top_down_camera"
homepage = "https://github.com/olekspickle/bevy_top_down_camera"
readme = "README.md"
edition = "2024"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [ "bevy_winit", "bevy_render", "wayland" ] }
bevy_unified_input = "0.3"
# Compile low-severity logs out of builds for performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
fs_extra = "1.3.0"

[dev-dependencies.bevy]
version = "0.19"
default-features = false
features = [ "3d", "ui", "debug" ]

# LINT
[lints.clippy]
collapsible_if = "allow"           # Queries may access many components, which would undesirably trigger this lint.

